# Apptrium

./: Cargo.toml  README.md
src/: json_parse.rs  main.rs  setting.rs
src/Style/: darkmode.css  style.css
