[package]
name = "Apptrium"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
gtk = { version = "0.6.1", package = "gtk4", features = ["v4_6"] }
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
